<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp">

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@android:color/transparent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">

        <TextView
            android:id="@+id/header_tw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/header_tw"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings_saved" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lang_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lang_label" />

        <Spinner
            android:id="@+id/lang_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@android:color/transparent" />

    <Switch
        android:id="@+id/upcoming_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_label" />

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/current_domain_tw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_domain_label"
        android:textSize="12sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@android:color/transparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/server_address_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_address_label" />

        <EditText
            android:id="@+id/server_address_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/server_address_hint"
            android:imeOptions="actionDone"
            android:inputType="textUri"
            android:maxLines="1"
            android:minHeight="48dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="@android:color/transparent" />

</LinearLayout>
